Fix cropped submit button on song upload page

--- a/public/css/artist/app.css
+++ b/public/css/artist/app.css
@@ -301,7 +301,9 @@ label h4 {
     font-weight: 900;
     margin: 1rem 0 2rem 0; }
   .artist-portal .main {
-    width: calc(100% - 200px); }
+    width: calc(100% - 200px);
+    position: static;
+    margin-left: 200px; }
   .artist-portal .tablet {
     display: none; }
   .artist-portal .sidebar {
